Update to work with Slurm v23-02-6-1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2.2"
 
 services:
   mysql:
-    image: mariadb:10.10
+    image: mariadb:latest
     hostname: mysql
     container_name: mysql
     environment:
@@ -14,11 +14,11 @@ services:
       - var_lib_mysql:/var/lib/mysql
 
   slurmdbd:
-    image: slurm-docker-cluster:${IMAGE_TAG:-21.08}
+    image: slurm-docker-cluster:23.02
     build:
       context: .
       args:
-        SLURM_TAG: ${SLURM_TAG:-slurm-21-08-6-1}
+        SLURM_TAG: slurm-23-02-6-1
     command: ["slurmdbd"]
     container_name: slurmdbd
     hostname: slurmdbd
@@ -32,8 +32,8 @@ services:
       - mysql
 
   slurmctld:
-    image: slurm-docker-cluster:${IMAGE_TAG:-21.08}
-    command: ["slurmctld"]
+    image: slurm-docker-cluster:23.02
+    command: ["slurmctld", ";", "sleep", "34534543"]
     container_name: slurmctld
     hostname: slurmctld
     volumes:
@@ -47,7 +47,7 @@ services:
       - "slurmdbd"
 
   c1:
-    image: slurm-docker-cluster:${IMAGE_TAG:-21.08}
+    image: slurm-docker-cluster:23.02
     command: ["slurmd"]
     hostname: c1
     container_name: c1
@@ -62,7 +62,7 @@ services:
       - "slurmctld"
 
   c2:
-    image: slurm-docker-cluster:${IMAGE_TAG:-21.08}
+    image: slurm-docker-cluster:23.02
     command: ["slurmd"]
     hostname: c2
     container_name: c2
